<resources>
    <string name="app_name">Pintools</string>
    <string name="title_activity_trialdanerror">trialdanerror</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="kembali">Kembalikan</string>
    <string name="logo_pintools">Logo Pintools</string>
    <string name="nanti_saja">Nanti saja</string>
    <string name="cari_dan_pinjam">Cari dan pinjam alat lewat aplikasi</string>
    <string name="perlu_alat">Perlu alat?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_cari">Cari</string>
    <string name="title_log">Log</string>
    <string name="title_akun">Akun</string>
    <string name="qrcode_scan">QRCode Scan</string>
    <string name="lab_telkom_timur_2">Lab Telkom Timur 2</string>
    <string name="lab_telkom_timur_1">Lab Telkom Timur 1</string>
    <string name="_4_alat_belum_dikembalikan">4 Alat belum dikembalikan</string>
</resources>
