<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="pintools.sisfo_android.BerandaFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_cari" />

    <fragment
        android:id="@+id/navigation_cari"
        android:name="pintools.sisfo_android.CariFragment"
        android:label="@string/title_cari"
        tools:layout="@layout/fragment_beranda" />

    <fragment
        android:id="@+id/navigation_log"
        android:name="pintools.sisfo_android.LogFragment"
        android:label="@string/title_log"
        tools:layout="@layout/fragment_log" />

    <fragment
        android:id="@+id/navigation_akun"
        android:name="pintools.sisfo_android.LogFragment"
        android:label="@string/title_akun"
        tools:layout="@layout/fragment_log" />

</navigation>