<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CariFragment">



    <SearchView
        android:id="@+id/AlatSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorText"
        android:iconifiedByDefault="false"
        android:queryHint="Cari alat"
        android:paddingBottom="6sp"
        android:radius="15sp"
        android:scaleType="fitStart"
        android:textAlignment="textStart"
        android:layout_alignParentStart="true"
        app:theme="@style/AppSearchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/category_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/AlatSearch">

        <androidx.cardview.widget.CardView

            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="5sp"
            android:layout_marginTop="10sp"
            android:background="@color/colorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10sp"
                android:text="@string/lab_telkom_timur_1"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_marginTop="10sp"
            android:layout_columnWeight="1"
            android:layout_marginStart="5sp"
            android:background="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:padding="10sp"
                android:text="@string/lab_telkom_timur_2"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/part_notification"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_part"
        android:baselineAligned="false"
        android:paddingTop="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_part">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/_4_alat_belum_dikembalikan"
                android:paddingEnd="30sp"
                android:paddingStart="0sp"
                android:textColor="@color/colorDanger"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1.75"
            android:gravity="end">

            <Button
                android:id="@+id/btn_kembali"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_gravity="top"
                android:layout_marginEnd="2sp"
                android:paddingStart="10dp"
                android:paddingEnd="10sp"
                android:background="@drawable/rounded_bg_warning"
                android:text="@string/kembali"
                android:textAllCaps="false"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_nanti"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_gravity="top"
                android:background="@drawable/rounded_bg_danger"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/nanti_saja"
                android:paddingStart="17sp"
                android:paddingEnd="17sp"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary2"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/part_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:background="@color/colorText"
        android:padding="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/part_notification">

        <ListView
            android:id="@+id/Cari_ListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="parent"
             />
        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/mProgressBar"
            android:indeterminate="true"
            android:indeterminateBehavior="cycle"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>