<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15sp"
    android:textAlignment="textStart"
    android:background="@color/colorBackground"
    tools:context=".ui.cari.CariFragment">

        <LinearLayout
            android:id="@+id/part_logo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="20sp"
            android:orientation="vertical"
            tools:ignore="ExtraText">
            <LinearLayout
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="0dp">
                <ImageView
                    android:id="@+id/logo_header"
                    android:src="@drawable/ic_logo_header"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:layout_marginStart="0sp"
                    android:layout_gravity="left"
                    android:contentDescription="@string/logo_pintools"
                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/part_name_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20sp"
            android:background="@drawable/login_rounded_bg"
            android:layout_below="@+id/part_logo"
            android:orientation="vertical">
            <TextView
                android:id="@+id/name_user"
                android:paddingBottom="5sp"
                android:layout_width="match_parent"
                android:textColor="@color/colorPrimary2"
                android:text="Halo Hayati Qurrotul U"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/colorText"
                android:text="@string/perlu_alat"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/colorText"
                android:text="@string/cari_dan_pinjam"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/part_border_bottom"
            android:layout_marginTop="20sp"
            android:layout_below="@id/part_name_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:background="#999"
                android:layout_width="match_parent"
                android:layout_height="1px"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/part_notification"
            android:layout_below="@id/part_border_bottom"
            android:paddingTop="25sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0sp"
                android:layout_weight="1.25"
                android:gravity="left"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingEnd="30sp"
                    android:text="4 Alat belum dikembalikan"
                    android:textColor="@color/colorDanger"
                    android:textSize="12sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0sp"
                android:layout_weight="1.75"
                android:gravity="right"
                android:layout_height="wrap_content">
                <Button
                    android:forceHasOverlappingRendering="true"
                    android:layout_gravity="top"
                    android:id="@+id/btn_kembali"
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:layout_marginEnd="2sp"
                    android:background="@drawable/rounded_bg_warning"
                    android:text="@string/kembali"
                    android:textSize="12sp"
                    android:textAllCaps="false"
                    android:textStyle="normal"
                    android:textColor="@color/colorPrimary" />
                <Button
                    android:layout_gravity="top"
                    android:id="@+id/btn_nanti"
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:padding="0sp"
                    android:background="@drawable/rounded_bg_danger"
                    android:text="@string/nanti_saja"
                    android:textSize="12sp"
                    android:textAllCaps="false"
                    android:textStyle="normal"
                    android:textColor="@color/colorPrimary2" />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/part_notification"
            android:layout_marginTop="40sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:gravity="left"
                android:layout_margin="3sp"
                app:cardPreventCornerOverlap="true"
                app:cardCornerRadius="10sp"
                app:contentPadding="10sp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="120sp"
                    android:padding="0sp"
                    android:src="@drawable/ic_kembali_ico"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Kembali"
                    android:layout_marginTop="45sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary2"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:gravity="right"
                app:cardPreventCornerOverlap="true"
                app:cardCornerRadius="10sp"
                app:contentPadding="10sp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="120sp"
                    android:padding="0sp"
                    android:src="@drawable/ic_pinjam_ico"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Pinjam"
                    android:layout_marginTop="45sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"/>

            </androidx.cardview.widget.CardView>
        </LinearLayout>



</RelativeLayout>